@@ -1,15 +1,26 @@
-# coding: utf-8
+# Copyright 2017~ mengalong <alongmeng@gmail.com>
+#
+# Licensed under the Apache License, Version 2.0 (the "License"); you may
+# not use this file except in compliance with the License. You may obtain
+# a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+# License for the specific language governing permissions and limitations
+# under the License.
+
+import ConfigParser
 
 import daiquiri
-import daiquiri.formatter
 import sys
 
 from bter.http import http_util
-from bter import utils
+from bter import service
 
-log_path = sys.path[0] + "/../log"
-log_file = "bter.log"
-utils.init_log_info(log_path, log_file)
+
 logger = daiquiri.getLogger(__name__)
 
 
@@ -61,6 +72,16 @@ class Manager(object):
                                 (url_name, url_target, response.content))
 
 
+# if __name__ == "__main__":
+#     manager = Manager(TARGET_URLS)
+#     manager.get_datas()
+
+
+def main():
+    conf = ConfigParser.ConfigParser()
+    service.service_prepare(config_file=sys.argv[1], conf=conf)
+    logger.info("The config path is:%s" % conf.get('DEFAULT', 'conf_path'))
+    logger.error("The error log")
+
 if __name__ == "__main__":
-    manager = Manager(TARGET_URLS)
-    manager.get_datas()
+    main()
