@@ -1,0 +1,7 @@
+[DEFAULT]
+
+[log]
+log_format = %(asctime)s [PID %(process)d] [%(levelname)s] %(name)s:%(lineno)d %(message)s
+log_path = /Users/mengalong/code/git/bter/bter/log
+log_filename = bter.log
+log_level = INFO
