@@ -2,3 +2,4 @@ logging >= 0.5.1.2 #
 daiquiri >= 1.0.1 #
 setuptools
 pbr
+ConfigParser
